# windbloat

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  LICENSE  README.md  bloatware.json  main.ps1
.claude/: codebase.md  settings.json
helper/: CMakeLists.txt
helper/src/: filesystem.cpp  filesystem.h  main.cpp  process.cpp  process.h  registry.cpp  registry.h  service.cpp  service.h  win32_utils.h
tools/: AppxBloatware.ps1  Privileges.ps1  ProductKey.ps1  SystemInfo.ps1  Win32Bloatware.ps1
